--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -8,6 +8,10 @@
             true
         );
         Set(
+            SelectedDocumentName,
+            Blank()
+        );
+        Set(
             SelectedFile,
             Blank()
         );
@@ -19,6 +23,7 @@
             isModalOpen,
             false
         );
+        Clear(header);
         Clear(colLines);
         Clear(colEntries);
         Clear(lockedItems);
