--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -1,16 +1,7 @@
 "scr_XMLTemeljniceInventure As screen.'autoLayout_HeaderFooter_ver1.0'":
     Fill: =RGBA(234, 83, 109, 1)
     LoadingSpinnerColor: =App.Theme.Colors.Primary
-    OnHidden: |
-        =Clear(colLines);
-        Set(
-            SelectedFile,
-            Blank()
-        );
-        Set(
-            SelectedFolder,
-            Blank()
-        );
+    OnHidden: =
     OnVisible: |
         =Set(
             isLoading,
@@ -480,7 +471,7 @@
                         )
                     DelayItemLoading: =true
                     Fill: =RGBA(237, 237, 237, 1)
-                    Height: =553
+                    Height: =Parent.Height
                     Items: =colLines
                     Layout: =Layout.Vertical
                     LoadingSpinner: =LoadingSpinner.Data
@@ -887,132 +878,27 @@
                     BasePaletteColor: =
                     DisplayMode: =DisplayMode.Edit
                     FontColor: =
-                    Height: =200
+                    Height: =Parent.Height
                     SpinnerSize: ='Spinner.SpinnerSize'.Huge
                     Visible: =isLoading
-                    Width: =200
+                    Width: =Parent.Width
                     X: =0
                     Y: =0
                     ZIndex: =2
 
-        hrz_InvFooter As groupContainer.horizontalAutoLayoutContainer:
-            AlignInContainer: =AlignInContainer.SetByContainer
-            BorderColor: =RGBA(233, 79, 76, 1)
-            DropShadow: =DropShadow.Light
-            Fill: =RGBA(237, 237, 237, 1)
-            FillPortions: =0
-            Height: =50
-            LayoutAlignItems: =LayoutAlignItems.Center
-            LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
-            LayoutMinHeight: =50
-            LayoutMinWidth: =250
-            LayoutMode: =LayoutMode.Auto
-            PaddingLeft: =15
-            PaddingRight: =20
-            Width: =Max(App.Width, App.MinScreenWidth)
-            ZIndex: =4
-
-            chb_InvReadyForNav As Checkbox:
-                BasePaletteColor: =RGBA(249, 83, 109, 1)
-                CheckboxSize: =16
-                DisplayMode: =If(!isLoading, DisplayMode.Edit, DisplayMode.Disabled)
-                FontColor: =
-                FontSize: =14
-                FontWeight: =FontWeight.Bold
-                Height: =Parent.Height
-                Label: ="NAV"
-                LayoutMinHeight: =32
-                LayoutMinWidth: =160
-                OnCheck: =false
-                OnUncheck: =false
-                Width: =75
-                X: =0
-                Y: =0
-                ZIndex: =2
-
-            btn_InvSave As Button:
-                Align: =Align.Justify
-                BasePaletteColor: =
-                DisplayMode: =If(isLoading, DisplayMode.Disabled, DisplayMode.Edit)
-                Height: =32
-                Layout: ='ButtonCanvas.Layout'.TextOnly
-                LayoutMinHeight: =32
-                LayoutMinWidth: =96
-                OnSelect: |
-                    =Set(
-                        isLoading,
-                        true
-                    );
-                    IfError(
-                        GetXml.Run(
-                            SelectedFile,
-                            ReadyForProcessing
-                        ),
-                        IfError(
-                            UpdateXML.Run(
-                                "{" & Char(34) & "Lines" & Char(34) & ": " & "{" & Char(34) & "Item_Journal_Line" & Char(34) & ":" & JSON(colLines) & "}" & "}",
-                                SelectedFile,
-                                SelectedFolder
-                            ),
-                            Notify(
-                                "Došlo je do greške!",
-                                NotificationType.Error,
-                                2000
-                            ),
-                            Notify(
-                                "Uspješno ažuriranje!",
-                                NotificationType.Success
-                            );
-                            If(
-                                chb_InvReadyForNav.Checked,
-                                ChangeXmlStatus.Run(
-                                    SelectedFile,
-                                    SelectedFolder,
-                                    ReadyForNAVProcessing
-                                );
-                                SaveData(
-                                    Filter(
-                                        lockedItems,
-                                        ThisRecord.documentId <> SelectedDocumentName
-                                    ),
-                                    "lockedItems"
-                                );
-                                Navigate(
-                                    scr_Entry,
-                                    ScreenTransition.Fade
-                                ),
-                                SaveData(
-                                    lockedItems,
-                                    "lockedItems"
-                                );
-                            )
-                        ),
-                        Set(
-                            SelectedFolder,
-                            ReadyForProcessing
-                        );
-                        Notify(
-                            "Postoje izmjene u ovom fajlu.",
-                            NotificationType.Information,
-                            2000
-                        );
-                        Navigate(
-                            scr_XMLTemeljniceInventure,
-                            ScreenTransition.Fade
-                        )
-                    );
-                    Set(
-                        isLoading,
-                        false
-                    );
-                Text: ="Sačuvaj"
-                Width: =96
-                X: =0
-                Y: =0
-                ZIndex: =4
+        com_InvFooter As com_Footer:
+            JSONData: |-
+                ="{" & Char(34) & "Lines" & Char(34) & ": " & "{" & Char(34) & "Item_Journal_Line" & Char(34) & ":" & JSON(colLines) & "}" & "}"
+            LayoutMinHeight: =640
+            LayoutMinWidth: =640
+            ZIndex: =5
 
     com_InvModal As com_Modal:
         LineId: =glr_Inv.Selected.'Line_No.'
+        Quantity: =glr_Inv.Selected.Qty_Phys_Inventory
+        QuantityCompleted: |
+            =glr_Inv.Selected.Qty_Phys_Inventory
+        QuantityNewLOT: =0
         ResEntryId: =
         Visible: =isModalOpen
         ZIndex: =3
